--- a/fundamentos/.gitignore
+++ b/fundamentos/.gitignore
@@ -1,3 +1,11 @@
+# IDE - VSCode
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+.history/*
+
 # Logs
 logs
 *.log
@@ -110,9 +118,12 @@ dist
 # Stores VSCode versions used for testing VSCode extensions
 .vscode-test
 
+
 # yarn v2
 .yarn/cache
 .yarn/unplugged
 .yarn/build-state.yml
 .yarn/install-state.gz
 .pnp.*
+
+node_modules/
