--- a/fundamentos/package.json
+++ b/fundamentos/package.json
@@ -4,14 +4,22 @@
   "description": "Ejemplos y ejercicios",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "karma start",
+    "lint": "eslint app/js/**/*.js"
   },
   "author": "Francisco José",
   "license": "ISC",
   "dependencies": {
-    "bootstrap": "^5.1.1"
+    "bootstrap": "^5.1.1",
+    "karma": "^6.3.4"
   },
   "devDependencies": {
-    "eslint": "^7.32.0"
+    "eslint": "^7.32.0",
+    "eslint-plugin-jasmine": "^4.1.2",
+    "jasmine-browser-runner": "^0.8.0",
+    "karma-chrome-launcher": "^3.1.0",
+    "karma": "^6.3.4",
+    "karma-coverage": "^2.0.3",
+    "karma-jasmine": "^4.0.1"
   }
 }
