--- a/angular/package.json
+++ b/angular/package.json
@@ -6,7 +6,8 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "lint": "ng lint"
   },
   "private": true,
   "dependencies": {
@@ -21,6 +22,11 @@
     "@fortawesome/fontawesome-free": "^5.15.4",
     "@types/validator": "^13.6.3",
     "bootstrap": "^5.1.1",
+    "paginator": "^1.0.0",
+    "primefaces": "^10.0.0",
+    "primeicons": "^4.1.0",
+    "primeng": "^12.2.0",
+    "quill": "^1.3.7",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
     "validator": "^13.6.0",
@@ -28,10 +34,18 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~12.2.8",
+    "@angular-eslint/builder": "12.5.0",
+    "@angular-eslint/eslint-plugin": "12.5.0",
+    "@angular-eslint/eslint-plugin-template": "12.5.0",
+    "@angular-eslint/schematics": "12.5.0",
+    "@angular-eslint/template-parser": "12.5.0",
     "@angular/cli": "~12.2.8",
     "@angular/compiler-cli": "~12.2.0",
     "@types/jasmine": "~3.8.0",
     "@types/node": "^12.11.1",
+    "@typescript-eslint/eslint-plugin": "4.28.2",
+    "@typescript-eslint/parser": "4.28.2",
+    "eslint": "^7.26.0",
     "jasmine-core": "~3.8.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
